Added animations to the cards

--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
         <a class="header-link link" lang="en" href="./index.html"><span class="logo-web">Web</span>Studio</a>
           <ul class="header-nav-list list">
                 <li class="item"><a class="header-item-link link" href="./index.html">Студия</a></li>
-                <li class="item"><a class="header-item-link link" href="./index.html">Портфолио</a></li> 
+                <li class="item"><a class="header-item-link current link" href="./index.html">Портфолио</a></li> 
                 <li class="item"><a class="header-item-link link" href="">Контакты</a></li>
             </ul>
      </nav> 
@@ -59,15 +59,21 @@
         </ul>
         <ul class="portfolio-img list">
             <li class="gallery-pic">
+                <div class="overlay-text"> 
                  <img  src="./images/img.jpg" alt="Ноутбук" width="370" height="294"> 
-                <div class="gallery-content">  
+                 <p class="picture-text"> Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                </div>
+                 <div class="gallery-content">  
                 <h2 class="portfolio-item">Технокряк</h2>
                 <p class="portfolio-text"> Веб-сайт</p>
             </div>
             </li>
             
             <li class="gallery-pic"> 
+                <div class="overlay-text"> 
                 <img  src="./images/img (1).jpg" alt="Баскетбол" width="370" height="294" > 
+                <p class="picture-text"> Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+            </div>
                 <div class="gallery-content"> 
                 <h2 class="portfolio-item">Постер New Orlean vs Golden Star</h2>
                 <p class="portfolio-text"> Дизайн</p>
@@ -75,7 +81,10 @@
 
             </li>
             <li class="gallery-pic"> 
+                <div class="overlay-text"> 
                 <img  src="./images/img (2).jpg" alt="Лого ресторану" width="370" height="294" > 
+                <p class="picture-text"> Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+            </div> 
                 <div class="gallery-content"> 
                 <h2 class="portfolio-item">Ресторан Seafood</h2>
                 <p class="portfolio-text"> Приложение</p>
@@ -83,7 +92,10 @@
 
             </li>
             <li class="gallery-pic"> 
+                <div class="overlay-text"> 
                 <img  src="./images/img (3).jpg" alt="Наушники" width="370" height="294" > 
+                <p class="picture-text"> Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p> 
+            </div>
                 <div class="gallery-content"> 
                 <h2 class="portfolio-item">Проект Prime</h2>
                 <p class="portfolio-text"> Маркетинг</p>
@@ -91,7 +103,10 @@
 
             </li>
             <li class="gallery-pic"> 
+                <div class="overlay-text"> 
                 <img  src="./images/img (4).jpg" alt="Боксы" width="370" height="294" > 
+                <p class="picture-text"> Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p> 
+            </div>
                 <div class="gallery-content"> 
                 <h2 class="portfolio-item">Проект Boxes</h2>
                 <p class="portfolio-text"> Приложение</p>
@@ -99,7 +114,10 @@
             </li>
 
             <li class="gallery-pic"> 
+                <div class="overlay-text">  
                 <img  src="./images/img (5).jpg" alt="компьютер" width="370" height="294" >
+                <p class="picture-text"> Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+            </div>
                 <div class="gallery-content"> 
                 <h2 class="portfolio-item" lang="en">Inspiration has no Borders</h2>
                 <p class="portfolio-text"> Веб-сайт</p>
@@ -107,7 +125,10 @@
 
             </li>
             <li class="gallery-pic"> 
+                <div class="overlay-text"> 
                 <img  src="./images/img (6).jpg" alt="Книга" width="370" height="294" >
+                <p class="picture-text"> Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+            </div>
                 <div class="gallery-content"> 
                 <h2 class="portfolio-item">Издание Limited Edition</h2>
                 <p class="portfolio-text"> Дизайн</p>
@@ -115,7 +136,10 @@
 
             </li>
             <li class="gallery-pic"> 
+                <div class="overlay-text"> 
                 <img  src="./images/img (7).jpg" alt="Ярлык" width="370" height="294" > 
+                <p class="picture-text"> Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+            </div>
                 <div class="gallery-content"> 
                 <h2 class="portfolio-item">Проект LAB</h2>
                 <p class="portfolio-text"> Маркетинг</p>
@@ -123,7 +147,10 @@
 
             </li>
             <li class="gallery-pic"> 
+                <div class="overlay-text"> 
                 <img  src="./images/img (8).jpg" alt="Веб-сайт" width="370" height="294" > 
+                <p class="picture-text"> Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+            </div>
                 <div class="gallery-content"> 
                 <h2 class="portfolio-item">Growing Business</h2>
                 <p class="portfolio-text"> Приложение</p>
