--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/styles.css" />
-    
 
 </head>
+
 <body>
     <!-- HEADER-->
 <header class="header">
@@ -20,7 +20,7 @@
     <nav class="header-nav"> 
         <a class="header-link link" lang="en" href=""><span class="logo-web">Web</span>Studio</a>
           <ul class="header-nav-list list"> 
-                <li class="item"><a class="header-item-link link" href="">Студия</a></li>
+                <li class="item"><a class="header-item-link current link" href="">Студия</a></li>
                 <li  class="item"><a class="header-item-link link" href="./portfolio.html" >Портфолио</a></li> 
                 <li  class="item"><a class="header-item-link link" href="" >Контакты</a></li>
             </ul>
@@ -50,8 +50,18 @@
    
         <section class="hero"> 
             <h1 class="hero-title">Эффективные решения <br>для вашего бизнеса</h1>
-            <button  class="hero-button link" type="button">Заказать услугу</button>
+            <button  class="hero-button link" type="button" data-modal-open>Заказать услугу</button>
         </section>
+        <div class="backdrop is-hidden" data-modal> 
+            <div class="modal">
+                <!--<h3> Оставьте свои данные, мы вам перезвоним</h3> -->
+            <button type="button" class="close" data-modal-close> 
+                <svg class=" icon-close" width="18" height="18"> 
+                    <use href="./images/symbol-defs.svg#icon-close"></use>
+                </svg>
+            </button>  
+            </div> 
+        </div>
 
         <!--Features-->
     <section class="features">
@@ -104,9 +114,15 @@
         <div class="container"> 
         <h2 class="work-title">Чем мы занимаемся</h2>
         <ul class="work-list list"> 
-            <li class="picture"> <img src="./img/1.jpg" alt="box1" width="370" height="294"></li>
-            <li class="picture"> <img src="./img/2.jpg" alt="box2" width="370" height="294"></li>
-            <li class="picture"> <img src="./img/3.jpg" alt="box3" width="370" height="294"></li>
+            <li class="picture"> <img src="./img/1.jpg" alt="box1" width="370" height="294">
+            <h3 class="work-text"> Десктопные приложения</h3>
+        </li>
+            <li class="picture"> <img src="./img/2.jpg" alt="box2" width="370" height="294">
+            <h3 class="work-text"> Мобильные приложения</h3>
+        </li>
+            <li class="picture"> <img src="./img/3.jpg" alt="box3" width="370" height="294">
+              <h3 class="work-text">Дизайнерские решения</h3>
+         </li>
         </ul>
          </div>
      </section>
@@ -372,6 +388,6 @@
     </div>
 </div>
 </footer>
-    
+<script src="./js/modal.js"></script>
 </body>
 </html>
