--- a/index.html
+++ b/index.html
@@ -47,21 +47,70 @@
    
  <main>
     <!-- HERO-->
-   
         <section class="hero"> 
             <h1 class="hero-title">Эффективные решения <br>для вашего бизнеса</h1>
             <button  class="hero-button link" type="button" data-modal-open>Заказать услугу</button>
         </section>
+
+           <!-- modal window -->
         <div class="backdrop is-hidden" data-modal> 
             <div class="modal">
-                <!--<h3> Оставьте свои данные, мы вам перезвоним</h3> -->
             <button type="button" class="close" data-modal-close> 
-                <svg class=" icon-close" width="18" height="18"> 
+                <svg class="icon-close" width="18" height="18"> 
                     <use href="./images/symbol-defs.svg#icon-close"></use>
                 </svg>
             </button>  
+
+            <p class="form-title"> Оставьте свои данные, мы вам перезвоним</p>
+            <form  class="form-contact">
+                <label class="form-name"> 
+                    <span class="form-area">  Имя
+                        <input type="text" name="username" class="form-input" required>              
+                           <svg class="form-icon" width="18" height="18">
+                          <use href="./images/symbol-defs.svg#icon-person"></use>
+                        </svg>
+                    </span>
+            </label>
+
+                <label> 
+                    <span class="form-area"> Телефон
+                     <input type="tel" name="tel" class="form-input" required>
+                       <svg class="form-icon" width="18" height="18">
+                    <use href="./images/symbol-defs.svg#icon-phone"></use>
+                </svg>
+            </span>
+             </label>
+
+                <label> 
+                    <span class="form-area"> Почта
+                      <input type="email" name="email" class="form-input" required> 
+                       <svg class="form-icon" width="18" height="18">
+                      <use href="./images/symbol-defs.svg#icon-email"></use>
+                </svg>
+            </span>
+            </label>
+
+                <label> 
+                    <span class="form-area"> Комментарий
+                <textarea name="comment" rows="10" class="form-text" placeholder="Введите текст"></textarea>
+            </span>
+        </label>
+
+        <label class="check-label"> 
+          <input  class="checkbox" type="checkbox"  name="policy" > 
+              <span class="check-icon"> 
+                <svg class="" width="16" height="15"> 
+                   <use href="./images/symbol-defs.svg#icon-tick"></use>
+              </svg>
+        </span>
+            <span class="check-text">Соглашаюсь с рассылкой и принимаю <a class="conditions" href="">Условия договора</a> </span>
+        </label>
+
+                <button class="form-button" type="submit">Отправить</button>
+            </form>
             </div> 
         </div>
+  
 
         <!--Features-->
     <section class="features">
@@ -386,6 +435,19 @@
             </li>
             </ul>
     </div>
+    <form class="footer-form">
+        <div class="footer-place"> 
+        <p class="form-heading"> Подпишитесь на рассылку</p>
+        <label class="subscribe-field"> 
+        <input class="subscribe-place" type="email" name="email" placeholder="E-mail" autofocus>
+    </label>
+        <button class="subscribe-button" type="submit"> Подписаться
+            <svg class="button-icon" width="24" height="24"> 
+                <use href="./images/symbol-defs.svg#icon-plane"> </use>
+            </svg>
+            </button>
+        </div>
+    </form>
 </div>
 </footer>
 <script src="./js/modal.js"></script>
